Move out of Java 8 Streams to closeable iterators.
This is to fix a performance issue due to Java 8 Streams buffering some
streams in some cases, leading to loading entire partitions in memory
unnecessarily:
https://stackoverflow.com/questions/47036993/why-the-tryadvance-of-stream-spliterator-may-accumulate-items-into-a-buffer